--- a/react/exercise/increase-descrease/increase-descrease/src/App.css
+++ b/react/exercise/increase-descrease/increase-descrease/src/App.css
@@ -36,6 +36,7 @@
   float: left;
   border: 1px solid white;
   color: white;
+ 
 }
 
 .exercise2 {
@@ -54,16 +55,6 @@
   border: 1px solid white;
   color: white;
 }
-/* .App-link {
-  color: #61dafb;
-} */
-
-/* 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+ h2{
+  margin-bottom: 50px;
+}
