--- a/react/exercise/to-do-list/src/Component/ToDoList.css
+++ b/react/exercise/to-do-list/src/Component/ToDoList.css
@@ -11,7 +11,7 @@
     font-size: 14px;
 }
 
-.input-area button {
+#submit {
     display: block;
     float: left;
     width: 20%;
@@ -21,15 +21,15 @@
     border: none;
 }
 
-.input-area button:focus {
+#submit:focus {
     outline: none;
 }
 
-.input-area button:hover {
+#submit:hover {
     background-color: navajowhite;
 }
 
-.input-area button:active {
+#submit:active {
     background-color: #282c34;
     color: white;
 }
@@ -38,7 +38,7 @@
     max-width: 80%;
 }
 
-.input-area input {
+#text-input {
     margin-right: 20px;
     display: block;
     float: left;
@@ -49,7 +49,7 @@
     border-left: none;
 }
 
-.input-area input:focus {
+#text-input:focus {
     outline: none;
 }
 
