--- a/react/exercise/home-page/src/App.css
+++ b/react/exercise/home-page/src/App.css
@@ -40,8 +40,11 @@
   color: black;
 }
 .link-container a:active {
-  background-color: rgba(255, 251, 0, 0.678);
+  /* background-color: rgba(255, 251, 0, 0.678);  */
   color: black;
+}
+.link-container a.active{
+  background-color: rgba(255, 251, 0, 0.678);
 }
 
 
